added cr defects

--- a/src/animals/style.module.scss
+++ b/src/animals/style.module.scss
@@ -7,7 +7,7 @@
 }
 
 .child {
-    border-style: solid;
+    // border-style: solid;
     width: 400px;
     position: relative;
     // display: flex;
